@@ -15,31 +15,12 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-# These packages must be built first and in this order.
-#SPECIAL = libs/xemacs-base libs/fsf-compat mule/mule-base libs/mail-lib \
-#	comm/vm libs/dired libs/efs libs/apel prog/cc-mode comm/w3 \
-#	comm/net-utils oa/edit-utils oa/speedbar
-
-# The rest require no further special treatment
 SUBDIRS = libs comm games prog wp os oa
 
-# Stuff to install, by default nothing.  Please set these variables
-# in Local.rules
-# XEmacs packages to install
-XEMACS_PACKAGES =
-# Where to install them
-XEMACS_STAGING =
-# Mule packages to install
-MULE_PACKAGES =
-# Where to install them
-MULE_STAGING =
-# Should we build the mule package?
-BUILD_WITHOUT_MULE =
-
 # Use a Local.rules file to specify what you wish to have installed
-sinclude Local.rules
+XEMACS_PACKAGES_BASE := $(shell pwd)
 
-ifeq ('$(BUILD_WITHOUT_MULE)','')
+ifeq ($(BUILD_WITHOUT_MULE),)
 SUBDIRS += mule
 endif
 
@@ -50,6 +31,9 @@ all:
 	for dir in $(SUBDIRS); do \
 		$(MAKE) $(MFLAGS) -C $${dir} bytecompile; \
 	done
+
+include Local.rules.mk
+-include Local.rules
 
 .PHONY: all bindist clean distclean install autoloads
 
